[package]
edition = "2021"
name = "sqlo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlo"
path = "src/lib.rs"
proc-macro = true

[features]
sqlite = ["sqlx/sqlite"]

[[example]]
name = "sqlite-maison"
# path = "examples/sqlite-maison/main.rs"
required-features = ["sqlite"]

[dependencies]
cargo_toml = "0.11"
darling = "0.14.1"
heck = "0.4"
itertools = "*"
proc-macro2 = "*"
quote = "*"
syn = {version = "1", features = ["full"]}

[dev-dependencies]
async-std = {version = "1", features = ["attributes"]}
dotenvy = "0.15"
paste = "*"
sqlx = {version = "0.6", features = [
  "runtime-async-std-native-tls",
  "sqlite",
  "uuid",
  "chrono",
]}
trybuild = "1"
uuid = {version = "1", features = ["v4"]}
