[package]
edition = "2021"
name = "sqlo"
version = "0.1.0"
license-file = "LICENSE"
description = """Syntactic sugar for sqlx. 
Sqlo is another attempt to make a nice/pleasant API in Rust using relational database.
Sqlo is built on top of sqlx and uses sqlx macros so you keep all the power of sqlx at compile time with less boiler plate.
Right now, Sqlite, Postgres and MySql are supported"""
readme = "README.md"
repository = "https://github.com/jgirardet/sqlo"
keywords = ["sqlx", "orm", "postgres", "sqlite", "mysql"]
categories = ["database-implementations"]
exclude = [".vscode/", ".sqlo/", "tests/", "TODO", "target/"]

[lib]
name = "sqlo"
path = "src/lib.rs"
proc-macro = true

[features]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]


[dependencies]
darling = "0.14"
glob = "0.3.0"
heck = "0.4"
itertools = "0.10"
lazy_static = "1"
paste = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
regex-macro = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
syn = { version = "1", features = ["full"] }     # wait darling support it
indexmap = "1.9"

[dev-dependencies]
sqlx = { version = "0.6", features = [
  "runtime-async-std-native-tls",
  "uuid",
  "chrono",
  "bigdecimal",
] }
async-std = { version = "1", features = ["attributes"] }
dotenvy = "0.15"
futures-lite = "1"
trybuild = "1"
uuid = { version = "1", features = ["v4"] }
bigdecimal = "0.3"
